--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
