--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "react-transition-group": "^1.2.1"
+    "react-showdown": "^2.0.3",
+    "react-transition-group": "^1.2.1",
+    "showdown": "^1.9.1",
+    "survey-react": "^1.7.8"
   },
   "scripts": {
     "start": "react-scripts start",
