--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-showdown": "^2.0.3",
     "react-transition-group": "^1.2.1",
