--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "survey-react": "^1.7.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
